--- a/templates/base.html
+++ b/templates/base.html
@@ -103,6 +103,14 @@
 
    
        <!-- Footer -->
+       <div class="footer-container">
+            <div class="face-container">
+                <div class="eye left-eye"></div>
+                <div class="eye right-eye"></div>
+                <img src="{% static 'images/elf.webp' %}" width="20%" height="20%" alt="Face" class="face-image">
+            </div>
+        </div>
+
        <footer class="footer mt-auto py-3 dark-bg">
     
        
@@ -124,6 +132,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="{% static 'js/christmas.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
