--- a/templates/base.html
+++ b/templates/base.html
@@ -72,11 +72,12 @@
                             href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
-                </ul>
-            </div>
-        </div>
+                </ul >
+            </div >
+        </div >
     </nav>
-
+     <!-- Add the Christmas Lights div at the bottom of the navbar -->
+     <div class="christmas-lights"></div>
 
 
      <!-- displaying Django messages -->
