--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,10 @@
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
                             href="{% url 'home' %}">Home</a>
                     </li>
+                    <li class="nav-item ">
+                        <a class="nav-link {% if request.path == bio_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'bio' %}">The devs</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
