Add: new images for bg & elf, elf fixed on footer

--- a/event/templates/event/post_detail.html
+++ b/event/templates/event/post_detail.html
@@ -142,4 +142,5 @@
 
 {% block extras %}
 <script src="{% static 'js/comments.js' %}"></script>
+<script src="{% static 'js/christmas.js' %}"></script>
 {% endblock %}
