--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Source Sans 3';
     font-weight: 400;
     width: 100%;
-    background-image: url('../images/bg.jpg'); /* Replace with your image */
+    background-image: url('../images/bg.webp'); /* Replace with your image */
     background-size: cover; /* Ensures the image covers the entire screen */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents tiling */
@@ -51,7 +51,7 @@ body {
 }
 /* Face (Elf) Container */
 .face-container {
-    position: absolute; /* Allows the elf to move freely within the footer-container */
+    position: fixed; /* Allows the elf to move freely within the footer-container */
     top: 610px; /* Move the elf upwards relative to the footer-container */
     left: 50%;
     transform: translateX(-50%); /* Center the elf horizontally */
