Edit: moved elf to index.html

--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -56,5 +56,14 @@
     {% endif %}
 </div>
 
+<div class="footer-container">
+    <div class="face-container">
+        <div class="eye left-eye"></div>
+        <div class="eye right-eye"></div>
+        <img src="{% static 'images/elf.webp' %}" width="20%" height="20%" alt="Face" class="face-image">
+    </div>
+</div>
+
+
 <!-- index.html content ends here -->
 {% endblock content %}
