--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -60,10 +60,10 @@
     <div class="face-container">
         <div class="eye left-eye"></div>
         <div class="eye right-eye"></div>
-        <img src="{% static 'images/elf.webp' %}" width="20%" height="20%" alt="Face" class="face-image">
+        <img src="{% static 'images/elf.webp' %}" alt="Face" class="face-image">
     </div>
 </div>
 
-
+<script src="{% static 'js/christmas.js' %}"></script>
 <!-- index.html content ends here -->
 {% endblock content %}
