Add: bottom christmas lights for tablet and mobile

--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <div class="footer-container">
-    <div class="face-container">
+    <div class="face-container" id="face-container">
         <div class="eye left-eye"></div>
         <div class="eye right-eye"></div>
         <img src="{% static 'images/elf.webp' %}" alt="Face" class="face-image">
