--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,8 @@
         </div >
     </nav>
      <!-- Add the Christmas Lights div at the bottom of the navbar -->
-     <div class="christmas-lights"></div>
+     <div class="christmas-lights christmas-lights-top"></div>
+ 
 
 
      <!-- displaying Django messages -->
@@ -106,13 +107,16 @@
     </main>
 
 
-   
+    <div class="christmas-lights christmas-lights-bottom"></div>
+
+    
+
        <!-- Footer -->
-
-
        <footer class="footer mt-auto py-3 dark-bg">
     
-       
+           
+
+
         <!-- Social -->
         <p class="d-flex justify-content-around foot-text align-items-center">
             <!-- GitHub -->
@@ -128,10 +132,11 @@
             <a class="foot-links" href="https://www.twitter.com" target="_blank" rel="noopener"
             aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a>
         </p>
+        
     </footer>
 
     <!-- Scripts -->
-   
+   <script src="{% static 'js/christmas.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
