--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,9 @@
    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
    <!-- Add Favicon -->
-   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/' %}" >
-   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/' %}">
-   <link rel="icon" type="image/png" sizes="16x16" href="{% static '/favicon/' %}">
+   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/favicon-180x180.png' %}" >
+   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+   <link rel="icon" type="image/png" sizes="16x16" href="{% static '/favicon/favicon-16x16.png' %}">
 
    <!-- Google Fonts -->
    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -42,8 +42,8 @@
     <nav class="navbar navbar-expand-lg navbar-light nav-bg">
         <div class="container-fluid">
             <div class="navbar-brand">
-               <!-- <img loading="lazy" src="{% static 'images/' %}" width="30" height="30"
-            alt="Capital B on a metel button. Used as the Bloggel Logo."> -->
+               <img loading="lazy" src="{% static 'images/logo.webp' %}" width="30" height="30"
+            alt="PostIt written on a yellow postit note. Used as the PostIt Logo.">
             <span class="brand-text">Post It</span>
             </div>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
