--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -24,7 +24,8 @@
                         {% endfor %}
                     </ul>
                 {% endif %}
-                <hr><button type="button" class="btn next-step" data-next="step-1">Check if available &raquo;</button>
+                <hr><button type="button" class="btn next-step" data-next="step-1">Check if available &raquo;</button><br>
+                <br> Already have an account?<br> <a class="link" href="{{ login_url }}">sign in</a> <hr>
             </div>
         
             <div id="step-1" class="form-step" style="display: none;">
