--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 {% for post in post_list %}
                 <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-around ">
-                    <div class="card mb-4 postholder">
+                    <div class="card mb-4 postholder data-post-id='{{ forloop.counter }}'">
                         <div class="card-body">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
@@ -37,19 +37,23 @@
                 </div>
 
                 {% endfor %}
-
+                
             </div>
         </div>
     </div>
     {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
+    <nav aria-label="Page navigation" class="pagination-container">
+        <ul class="pagination">
             {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a></li>
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link btn-page-prev">&laquo; PREV</a>
+            </li>
             {% endif %}
-
+    
             {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            <li>
+                <a href="?page={{ page_obj.next_page_number }}" class="page-link btn-page-next">NEXT &raquo;</a>
+            </li>
             {% endif %}
         </ul>
     </nav>
@@ -63,7 +67,7 @@
         <img src="{% static 'images/elf.webp' %}" alt="Face" class="face-image">
     </div>
 </div>
-
+<script src="{% static 'js/postColours.js' %}"></script>
 <script src="{% static 'js/christmas.js' %}"></script>
 <!-- index.html content ends here -->
 {% endblock content %}
